# TEESimulator-RS

./: README.md
.github/workflows/: build.yml
.omc/plans/: gradle-init-script-modernization-2026-05-19.md  self-sufficient-spoofing-handoff-2026-05-19.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp
app/src/main/cpp/compat/: refbase_compat.cpp  refbase_compat.h
app/src/main/cpp/inject/: main.cpp
app/src/main/java/org/matrix/TEESimulator/: App.kt
app/src/main/java/org/matrix/TEESimulator/attestation/: AttestationBuilder.kt  AttestationPatcher.kt  DeviceAttestationService.kt  KeyMintAttestation.kt
app/src/main/java/org/matrix/TEESimulator/config/: BootStateManager.kt  ConfigurationManager.kt  PatchLevelManager.kt
app/src/main/java/org/matrix/TEESimulator/interception/keystore/: InterceptorUtils.kt  Keystore2Interceptor.kt  KeystoreInterceptor.kt  ListEntriesHandler.kt
app/src/main/java/org/matrix/TEESimulator/interception/keystore/shim/: GeneratedKeyPersistence.kt  KeyMintSecurityLevelInterceptor.kt  OperationInterceptor.kt  SoftwareOperation.kt
app/src/main/java/org/matrix/TEESimulator/pki/: CertificateGenerator.kt
app/src/main/java/org/matrix/TEESimulator/util/: AndroidDeviceUtils.kt
module/: action.sh  changelog.md  sepolicy.rule  uninstall.sh  update.json
native-certgen/: Cargo.toml
native-certgen/src/: certbuilder.rs  error.rs  lib.rs
native-certgen/src/logging/: dump.rs  kmsg.rs  mod.rs  rotating.rs  sysfs.rs
